welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:3: error: '=' expected but ';' found.
if (a >= 13 && a <= 19) {
^